k8s-manifest-files/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ipl-pod
  namespace: saurav-ns

spec:
  containers:
    - name: ipl
      image: muralisocial123/ipl:latest
      ports:
        - containerPort: 3000
    

---

apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: saurav-ns

spec:
  containers:
    - name: nginx-web
      image: nginx:latest
      ports:
        - containerPort: 80


---

apiVersion: v1
kind: Pod
metadata:
  name: jenkins-pod
  namespace: saurav-ns
spec:
  containers:
    - name: jenkins-web
      image: jenkins/jenkins:latest
      ports:
        - containerPort: 8080


---

apiVersion: v1
kind: Pod
metadata:
  name: python-pod
  namespace: saurav-ns
spec:
  containers:
    - name: python-web
      image: python:latest
      ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  namespace: saurav-ns
spec:
  containers:
    - name: mysql-web
      image: mysql:latest
      ports:
        - containerPort: 3306
