k8s-manifest-files/svc.yaml
apiVersion : v1
kind: Service
metadata:
  name: ipl-service
  namespace: saurav-ns

spec:
  selector: 
    app: ipl
  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  
  type: ClusterIP


---

apiVersion : v1
kind: Service
metadata:
  name: ipl-service
  namespace: saurav-ns

spec:
  selector:
    app: ipl

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30081
  type: NodePort
---

apiVersion : v1
kind: Service
metadata:
  name: ipl-service
  namespace: saurav-ns

spec:
  selector: 
    app: ipl
  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  
  type: LoadBalancer


---

apiVersion : v1
kind: Service
metadata:
  name: netflix-service
  namespace: saurav-ns

spec:
  selector: 
    app: netflix
  
  ports:
    - protocol: TCP
      port: 81
      targetPort: 80
  
  type: ClusterIP


---
apiVersion : v1
kind: Service
metadata:
  name: nginx-service
  namespace: saurav-ns

spec:
  selector: 
    app: nginx
  
  ports:
    - protocol: TCP
      port: 82
      targetPort: 80
  
  type: ClusterIP

---

apiVersion : v1
kind: Service
metadata:
  name: httpd-service
  namespace: saurav-ns

spec:
  selector: 
    app: httpd
  
  ports:
    - protocol: TCP
      port: 83
      targetPort: 80
  
  type: ClusterIP

---
apiVersion : v1
kind: Service
metadata:
  name: node-service
  namespace: saurav-ns

spec:
  selector: 
    app: node
  
  ports:
    - protocol: TCP
      port: 84
      targetPort: 3000
  
  type: ClusterIP
